# Quirky_Quartet

./: .gitignore  .gitmodules  Dockerfile  README.md  check_jobs  codex_code_gen.py  config.json  config.yaml  debug  gpu_interact  interact  main.py  pyproject.toml  run  sandboxed  setup_gvisor  submit  temp_batch  torch_cuda
data/: synthetic_depth_1.csv  synthetic_depth_2.csv  synthetic_depth_3.csv  synthetic_depth_4.csv
output/: dp_probs1_0.py
prompts/: dp_probs1.csv  mbpp_prompts.txt
results/: t5_tuned_synthetic_depth_1.csv  t5_tuned_synthetic_depth_2.csv  t5_tuned_synthetic_depth_3.csv  t5_tuning_results.xlsx
results/mbpp/: results.json  results.xlsx  ~$results.xlsx
results/synthetic_t5/version_4/: hparams.yaml  metrics.csv
results/synthetic_t5/version_4_synthetic_all/: hparams.yaml  metrics.csv
results/t5/: mbpp_results.xlsx  t5_tuning_results.xlsx
results/t5/mbpp_t5/: t5_out_mbpp_tuned.csv  t5_out_mbpp_untuned.csv
results/zero_shot/: synthetic_depth_1.csv  synthetic_depth_2.csv  synthetic_depth_3.csv
scripts/: analysis.py  analyze_synthetic_tuning_loss.py  analyze_t5_tuning.py  analyze_zero_shot_synthetic_codex.py  drop_column.py  evaluation.py  example.py  generate_synthetic_data.py  pegasus_finetuning.py  synthetic_evaluation.py  synthetic_huggingface_model_evaluation.py  synthetic_t5_evaluation.py  test_human_eval_lib.py  tune_mono_synthetic_generalize.py  tune_t5_codexglue.py  tune_t5_model_codexglue.py  tune_t5_model_mbpp.py  tune_t5_synthetic.py  tune_t5_synthetic_all.py  tune_t5_synthetic_generalize.py
(+2136 files in other folders)
