[tool.poetry]
name = "quirky_quartet"
version = "0.0.0"
description = "Prompting and data augmentation techniques for code generation"
authors = ["LSaldyt <lucassaldyt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.10,<3.11"
openai = "^0.24.0"
PyYAML = "^6.0"
rich = "^12.6.0"
fire = "^0.4.0"
tqdm = "^4.64.1"
numpy = "^1.23.4"
datasets = "^2.6.1"
transformers = "^4.24.0"
python-graphs = "^1.2.3"
seaborn = "^0.12.1"
pytorch-lightning = "^1.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
